--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="hero">
 
-    <h2>{{hero.name | uppercase}} Details</h2>
+    <h2>{{hero.name | uppercase}} Detalhes do herói</h2>
     <div><span>id: </span>{{hero.id}}</div>
     <div>
       <label for="hero-name">Nome do Herói: </label>
