--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -1,10 +1,9 @@
 <div *ngIf="hero">
-
-    <h2>{{hero.name | uppercase}} Detalhes do herói</h2>
-    <div><span>id: </span>{{hero.id}}</div>
-    <div>
-      <label for="hero-name">Nome do Herói: </label>
-      <input id="hero-name" [(ngModel)]="hero.name" placeholder="name">
-    </div>
-  
+  <h2>{{hero.name | uppercase}} Detalhes</h2>
+  <div><span>id: </span>{{hero.id}}</div>
+  <div>
+    <label for="hero-name">Nome do Heroi: </label>
+    <input id="hero-name" [(ngModel)]="hero.name" placeholder="Nome do Heroi"/>
   </div>
+  <button (click)="goBack()">Voltark</button>
+</div>
